--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,7 @@
 $background-color: #080c20;
 $gray-text-color: #777f98;
 $white: #fff;
+$black: #000;
 $darker-blue: #093f68;
 $light-blue: #3ee9e5;
 $error-color: #ff2965;
