--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -462,9 +462,10 @@ body {
 }
 
 @media (min-width: 992px) {
-}
+	.nav {
+		padding-top: 4em;
+	}
 
-@media (min-width: 1440px) {
 	.header {
 		position: relative;
 		&__bg {
@@ -499,10 +500,10 @@ body {
 	}
 
 	.about {
-		padding: 13em 2em;
 		.wrapper {
 			max-width: 1100px;
 		}
+
 		&__boxes {
 			flex-direction: row;
 			gap: 2.5em;
@@ -536,6 +537,10 @@ body {
 			max-width: 920px;
 		}
 
+		&__title {
+			font-size: 3.2rem;
+		}
+
 		&__text {
 			margin-bottom: 7em;
 			max-width: 540px;
@@ -560,7 +565,6 @@ body {
 	}
 
 	.newsletter {
-		padding: 9.7em 0;
 		background-size: 130%;
 		background-position: 70% 50%;
 		background-repeat: no-repeat;
@@ -568,5 +572,17 @@ body {
 		&__title {
 			font-size: 3.2rem;
 		}
+	}
+}
+
+@media (min-width: 1440px) {
+
+	.about {
+		padding: 13em 2em;
+	}
+
+
+	.newsletter {
+		padding: 9.7em 0;
 	}
 }
