--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,12 @@ body {
 	background-color: $background-color;
 }
 
+@mixin pStyles {
+	font-size: 1.5rem;
+	line-height: 2.5rem;
+	color: $gray-text-color;
+}
+
 .wrapper {
 	margin: 0 auto;
 	width: 100%;
@@ -61,9 +67,7 @@ body {
 	}
 
 	&__text {
-		font-size: 1.5rem;
-		line-height: 2.5rem;
-		color: $gray-text-color;
+		@include pStyles;
 	}
 }
 
@@ -109,9 +113,7 @@ body {
 		}
 
 		&-text {
-			color: $gray-text-color;
-			font-size: 1.5rem;
-			line-height: 2.5rem;
+			@include pStyles;
 		}
 	}
 }
@@ -136,9 +138,7 @@ body {
 	}
 
 	&__text {
-		color: $gray-text-color;
-		line-height: 2.5rem;
-		font-size: 1.5rem;
+		@include pStyles;
 	}
 
 	&__card {
@@ -158,9 +158,7 @@ body {
 		}
 
 		&-text {
-			color: $gray-text-color;
-			font-size: 1.5rem;
-			line-height: 2.5rem;
+			@include pStyles;
 		}
 
 		&-price {
@@ -172,9 +170,8 @@ body {
 			font-weight: bold;
 
 			span {
-				font-size: 1.5rem;
+				@include pStyles;
 				font-weight: 400;
-				color: $gray-text-color;
 			}
 		}
 
@@ -576,11 +573,14 @@ body {
 }
 
 @media (min-width: 1440px) {
+	.nav {
+		padding-top: 6em;
+	}
+	
 
 	.about {
 		padding: 13em 2em;
 	}
-
 
 	.newsletter {
 		padding: 9.7em 0;
