--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -283,7 +283,7 @@ body {
 	&__btn {
 		grid-column: 1/7;
 		grid-row: 3/4;
-		padding: 1em 1.5em;
+		padding: 1em;
 		border: 2px solid transparent;
 		border-radius: 2em;
 		background-color: $light-blue;
@@ -507,7 +507,8 @@ body {
 			max-width: 445px;
 
 			&-title {
-				margin-top: 1em;
+				margin-top: 1.5em;
+				margin-bottom: 0.5em;
 			}
 
 			&--first {
@@ -537,10 +538,10 @@ body {
 	}
 
 	.about {
-		padding: 13em 2em;
+		padding: 14em 2em;
 	}
 
 	.newsletter {
-		padding: 9em 0;
+		padding: 7em 0;
 	}
 }
