--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -538,10 +538,10 @@ body {
 	}
 
 	.about {
-		padding: 14em 2em;
+		padding: 15em 2em;
 	}
 
 	.newsletter {
-		padding: 7em 0;
+		padding: 5em 0 7em;
 	}
 }
