changed styles for min-width 14440px

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -542,13 +542,13 @@ body {
 	}
 
 	.about {
-		padding: 10em 2em;
+		padding: 12em 2em;
 	}
 	.offers {
-		padding: 0 2em 10em;
+		padding: 2em 2em 10em;
 	}
 
 	.newsletter {
-		padding: 0 0 7em;
+		padding: 2em 0 7em;
 	}
 }
