--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -538,17 +538,17 @@ body {
 	}
 
 	.header {
-		margin: 2em 0 0;
+		margin: 2em 0 1em;
 	}
 
 	.about {
-		padding: 12em 2em;
+		padding: 14em 2em;
 	}
 	.offers {
-		padding: 2em 2em 10em;
+		padding: 4em 2em 14em;
 	}
 
 	.newsletter {
-		padding: 2em 0 7em;
+		padding: 4em 0 9em;
 	}
 }
