--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -538,17 +538,17 @@ body {
 	}
 
 	.header {
-		margin: 2em 0 1em;
+		margin: 2em 0 0;
 	}
 
 	.about {
 		padding: 14em 2em;
 	}
 	.offers {
-		padding: 4em 2em 14em;
+		padding: 0;
 	}
 
 	.newsletter {
-		padding: 4em 0 9em;
+		padding: 12em 2em 8em;
 	}
 }
